--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Kovalenkov P",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.1",
     "nodemon": "^1.19.2"
   }
 }
